--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.5",
     "nuxt": "^3.14.1592",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "vue": "latest",
     "vue-router": "latest"
