--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "diskette-homepage",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.20.0",
     "@primevue/themes": "^4.2.5",
     "nuxt": "^3.14.1592",
     "primeicons": "^7.0.0",
