Finished Basically Every Section

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nuxt/icon": "^1.10.1",
     "@nuxt/ui": "^2.20.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@primevue/forms": "^4.2.5",
     "@primevue/icons": "^4.2.5",
     "@primevue/themes": "^4.2.5",
+    "@vueform/nuxt": "^1.8.0",
     "nuxt": "^3.14.1592",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
