--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Nuxt dev/build outputs
+n# Nuxt dev/build outputs
 .output
 .data
 .nuxt
@@ -22,3 +22,6 @@ logs
 .env
 .env.*
 !.env.example
+
+# Local Netlify folder
+.netlify
