Added collection and other minor fixes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.2.5"
+    "@primevue/nuxt-module": "^4.2.5",
+    "stylus": "^0.64.0"
   }
 }
