--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.10.1",
+    "@nuxt/image": "^1.9.0",
     "@nuxt/ui": "^2.20.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@primevue/forms": "^4.2.5",
