--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diskette-homepage",
+  "name": "nuxt-app",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,25 +10,38 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/icon": "^1.10.1",
-    "@nuxt/image": "^1.9.0",
-    "@nuxt/ui": "^2.20.0",
-    "@nuxtjs/color-mode": "^3.5.2",
-    "@primevue/forms": "^4.2.5",
-    "@primevue/icons": "^4.2.5",
-    "@primevue/themes": "^4.2.5",
-    "@vueform/nuxt": "^1.8.0",
-    "axios": "^1.7.9",
-    "lucide-vue-next": "^0.469.0",
-    "nuxt": "^3.14.1592",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.2.5",
-    "rss-parser": "^3.13.0",
-    "vue": "latest",
-    "vue-router": "latest"
+    "@nuxt/fonts": "0.11.1",
+    "@nuxt/icon": "1.11.0",
+    "@nuxt/image": "1.10.0",
+    "@nuxt/scripts": "0.11.5",
+    "@nuxt/ui": "3.0.2",
+    "@tresjs/cientos": "^4.3.0",
+    "@tresjs/core": "^4.3.3",
+    "@tresjs/nuxt": "3.0.8",
+    "@vueuse/core": "^13.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.6.0",
+    "lucide-vue-next": "^0.487.0",
+    "nuxt": "^3.16.2",
+    "nuxt-aos": "1.2.5",
+    "reka-ui": "^2.2.0",
+    "shadcn-nuxt": "2.0.1",
+    "tailwind-merge": "^3.2.0",
+    "three": "^0.175.0",
+    "tw-animate-css": "^1.2.5",
+    "typescript": "^5.6.3",
+    "v-gsap-nuxt": "1.3.20",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
+  "packageManager": "pnpm@10.8.0",
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.2.5",
-    "stylus": "^0.64.0"
+    "@iconify/vue": "^4.3.0",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/three": "^0.175.0",
+    "sass-embedded": "^1.86.3",
+    "tailwindcss": "^4.1.3"
   }
 }
