--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.487.0",
     "nuxt": "^3.16.2",
