--- a/package.json
+++ b/package.json
@@ -15,34 +15,35 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/ui": "3.0.2",
-    "@tresjs/cientos": "^4.3.0",
-    "@tresjs/core": "^4.3.3",
+    "@nuxtjs/color-mode": "3.5.2",
+    "@tresjs/cientos": "^4.3.1",
+    "@tresjs/core": "^4.3.6",
     "@tresjs/nuxt": "3.0.8",
-    "@vueuse/core": "^13.1.0",
+    "@vueuse/core": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.487.0",
-    "nuxt": "^3.16.2",
+    "nuxt": "^3.17.7",
     "nuxt-aos": "1.2.5",
-    "reka-ui": "^2.2.0",
+    "reka-ui": "^2.3.2",
     "shadcn-nuxt": "2.0.1",
-    "tailwind-merge": "^3.2.0",
+    "stylus": "0.0.1-security",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.175.0",
-    "tw-animate-css": "^1.2.5",
-    "typescript": "^5.6.3",
+    "tw-animate-css": "^1.3.5",
+    "typescript": "^5.8.3",
     "v-gsap-nuxt": "1.3.20",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
-  "packageManager": "pnpm@10.8.0",
+  "packageManager": "pnpm@10.13.1",
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
-    "@nuxtjs/color-mode": "^3.5.2",
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/three": "^0.175.0",
-    "sass-embedded": "^1.86.3",
-    "tailwindcss": "^4.1.3"
+    "sass-embedded": "^1.89.2",
+    "tailwindcss": "^4.1.11"
   }
 }
