--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tresjs/cientos": "^4.3.1",
     "@tresjs/core": "^4.3.6",
     "@tresjs/nuxt": "3.0.8",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,20 +29,22 @@
     "nuxt-aos": "1.2.5",
     "reka-ui": "^2.3.2",
     "shadcn-nuxt": "2.0.1",
-    "stylus": "0.0.1-security",
+    "stylus": "0.64.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.175.0",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.8",
+    "zod": "^4.0.17"
   },
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/three": "^0.175.0",
-    "sass-embedded": "^1.89.2",
     "tailwindcss": "^4.1.11"
   }
 }
