Fix Icons & descs

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-n# Nuxt dev/build outputs
+# Nuxt dev/build outputs
 .output
 .data
 .nuxt
@@ -17,6 +17,7 @@ logs
 .DS_Store
 .fleet
 .idea
+pnpm-lock.yaml
 
 # Local env files
 .env
