--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-vue-next": "^0.487.0",
     "nuxt": "^3.17.7",
     "nuxt-aos": "1.2.5",
+    "nuxt-module-hotjar": "1.3.4",
     "reka-ui": "^2.3.2",
     "shadcn-nuxt": "2.0.1",
     "stylus": "0.64.0",
